documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32.H

typedef void VOID;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned __int64 ULONGLONG;
typedef unsigned long HVL;
typedef unsigned long HPORT;
typedef unsigned long * LPHPORT;
typedef unsigned long HSCHED;
typedef unsigned long * LPHSCHED;
typedef unsigned long HSCHEDITEM;
typedef unsigned long * LPHSCHEDITEM;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

/**************************
*
*   Constants
*
**************************/

enum {	MAX_AFDXPAYLOAD    = 1471,                //Max Payload Size defined for valid AFDX Frames - not including RSN byte
		MIN_AFDXPAYLOAD    = 17,                  //Min Payload Size defined for valid AFDX Frames - not including RSN byte
		MAX_UDPPAYLOAD     = 1472,                //Max Payload Size defined for valid UDP Frames - includes RSN byte
		MIN_UDPPAYLOAD     = 18,                  //Min Payload Size defined for valid UDP Frames - includes RSN byte
		MAX_AFDXPACKETSIZE = 1514,                //Max size of VALID AFDX transmit/receive packets (in bytes)
		MIN_PACKETBUFSIZE  = 60,                  //Min size of buffer used to transmit packets (in bytes)
		MAX_SEQRDBUFSIZE   = 0xFD000,             //Max buffer size for SeqRd functions

		HEADERLEN_MAC = 14,                                         //MAC header length = Destination(6bytes)+Source(6)+Type(2)
		HEADERLEN_IP  = 20,                                         //IP header length  
		HEADERLEN_UDP = 8,                                          //UDP header length = SourcePort(2bytes)+DestPort(2)+Len(2)+CRC(2)
		HEADERLEN_ALL = (HEADERLEN_MAC+HEADERLEN_IP+HEADERLEN_UDP), //Length of all headers (14+20+8=42) for IPV4 UDP packets

		DESCOFFSET_PKT = 32,                      //Offset of packet in AFDX packet descriptor
		DESCOFFSET_HDR = 32,                      //Offset of header in AFDX packet descriptor header

		MACLOCALMULTICAST_MASK = 0x03000000       //Group and the locally administered bits (upper 32-byte mask - constant portion)
};
typedef struct
{
    USHORT type;               
    USHORT count;              
    ULONG  timestamp;         
    ULONG  timestamph;        
    ULONG  delay;          
    ULONG  delayh;         
    ULONG  activity;
    ULONG  errors;
    USHORT busnum;
    USHORT totalpktlen;     //Total packet length
    BYTE   packet[MAX_AFDXPACKETSIZE+64];
} AFDXPKTDESC;
typedef AFDXPKTDESC * LPAFDXPKTDESC;
    typedef struct
    {
        BYTE data[6];
    } ADDRESS;
typedef ADDRESS * LPADDRESS;

AX1W32API ERRVAL __stdcall AX1_NetDefaultPortConfig(ULONG ctrlflags,USHORT depth,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_NetDefaultPortGetHandle(LPHPORT hport,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_NetGetVLCount(LPUSHORT pvlcount,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_NetIFGConfig(ULONG configval,USHORT gapval,USHORT busnum,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_NetRedundConfig(ULONG configval,USHORT pairid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_NetSetInterfaceID(USHORT flags,USHORT idVal,USHORT netid,HCARD handleval);

AX1W32API USHORT __stdcall AX1_Ntoh16(USHORT val);

AX1W32API ULONG __stdcall AX1_Ntoh32(ULONG val);

AX1W32API ULONGLONG __stdcall AX1_Ntoh64(ULONGLONG val);

AX1W32API ERRVAL __stdcall AX1_ParamFrameFreq(ULONG configval,USHORT percent,USHORT netid,HCARD handleval);

AX1W32API USHORT __stdcall AX1_PktCalcCRCIP(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktCalcCRCUDP(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetCtrlFlag(LPBYTE pPkt);

AX1W32API BOOL __stdcall AX1_PktGetDstMac(LPBYTE pPkt,LPADDRESS pAddress);

AX1W32API USHORT __stdcall AX1_PktGetFragID(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetFragOff(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetIHL(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetInterfaceID(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetIPChecksum(LPBYTE pPkt);

AX1W32API ULONG __stdcall AX1_PktGetIPDest(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetIPLength(LPBYTE pPkt);

AX1W32API ULONG __stdcall AX1_PktGetIPSrc(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetProtocol(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetSeqNum(LPBYTE pPkt);

AX1W32API BOOL __stdcall AX1_PktGetSrcMac(LPBYTE pPkt,LPADDRESS pAddress);

AX1W32API USHORT __stdcall AX1_PktGetTOS(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetTTL(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetType(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetUDPChecksum(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetUDPLength(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetUDPPortDest(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetUDPPortSrc(LPBYTE pPkt);

AX1W32API USHORT __stdcall AX1_PktGetVersion(LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutCtrlFlag(USHORT newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutDstMac(ADDRESS newMAC,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutFragID(USHORT newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutFragOff(USHORT newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutHeaderConstants(LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutIHL(USHORT newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutInterfaceID(USHORT busnum,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutIPChecksum(USHORT newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutIPDest(ULONG newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutIPLength(USHORT newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutIPSrc(ULONG newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutLenFromFrame(USHORT frameSize,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutProtocol(USHORT newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutSeqNum(USHORT newNum,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutSrcMac(ADDRESS newMAC,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutTOS(USHORT newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutTTL(USHORT newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutType(USHORT newType,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutUDPChecksum(USHORT newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutUDPLength(USHORT newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutUDPPortDest(USHORT newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutUDPPortSrc(USHORT newVal,LPBYTE pPkt);

AX1W32API VOID __stdcall AX1_PktPutVersion(USHORT newVal,LPBYTE pPkt);

AX1W32API ERRVAL __stdcall AX1_PortConfig(ULONG configval,USHORT dstid,USHORT srcid,USHORT depth,LPHPORT portptr,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortDataRd(LPBYTE data,LPUSHORT lengthptr,LPBYTE rsnptr,LPULONG timetaghptr,LPULONG timetagptr,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortDataWr(BYTE rsn,LPBYTE data,USHORT length,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortGetHandle(USHORT portnum,LPHPORT hport,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortGetInfo(LPULONG configval,LPUSHORT vlid,LPUSHORT dstport,LPUSHORT srcport,LPUSHORT depth,LPUSHORT reprate,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortGetNext(USHORT flag,LPUSHORT nextPort,USHORT lastPort,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortGetQueueCount(LPUSHORT queuecount,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortInfoRd(LPULONG timetaghptr,LPULONG timetagptr,LPULONG activityptr,LPULONG errorptr,LPBYTE rsnptr,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortRawRd(LPBYTE packet,LPUSHORT lengthptr,LPULONG timetaghptr,LPULONG timetagptr,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortRawWr(LPBYTE packet,USHORT length,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortRd(LPAFDXPKTDESC pktdesc,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortSkipConfig(ULONG ctrlflags,USHORT trigid,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortStepConfig(ULONG ctrlflags,USHORT trigid,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RcvHostEnable(BOOL enableval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RobinSchedPort(BOOL bSkip,BOOL bShot,BOOL bTxA,BOOL bTxB,HPORT hport,LPHSCHEDITEM hscheditem,HSCHED hrobin,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedBuild(USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedCrtRobin(LPHSCHED hrobin,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedCrtSub(LPHSCHED hsub,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedFrameEnd(USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedFrameStart(ULONG usframetime,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedItemUpdate(BOOL bSkip,BOOL bShot,BOOL bTxA,BOOL bTxB,HSCHEDITEM hscheditem,HCARD handleval);