documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32VB.BAS

Public Declare Function AX1_NetDefaultPortConfig Lib "AX1W32.DLL" Alias "_AX1_NetDefaultPortConfig@16" (ByVal ctrlflags As Long, ByVal depth As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_NetDefaultPortGetHandle Lib "AX1W32.DLL" Alias "_AX1_NetDefaultPortGetHandle@12" (ByRef hport As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_NetGetVLCount Lib "AX1W32.DLL" Alias "_AX1_NetGetVLCount@12" (ByRef pvlcount As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_NetIFGConfig Lib "AX1W32.DLL" Alias "_AX1_NetIFGConfig@16" (ByVal configval As Long, ByVal gapval As Integer, ByVal busnum As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_NetRedundConfig Lib "AX1W32.DLL" Alias "_AX1_NetRedundConfig@12" (ByVal configval As Long, ByVal pairid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_NetSetInterfaceID Lib "AX1W32.DLL" Alias "_AX1_NetSetInterfaceID@16" (ByVal flags As Integer, ByVal idVal As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_Ntoh16 Lib "AX1W32.DLL" Alias "_AX1_Ntoh16@4" (ByVal val As Integer) As Integer
Public Declare Function AX1_Ntoh32 Lib "AX1W32.DLL" Alias "_AX1_Ntoh32@4" (ByVal val As Long) As Long
'Note: The following function uses a data type not supported in VB6.
'Public Declare Function AX1_Ntoh64 Lib "AX1W32.DLL" Alias "_AX1_Ntoh64@8" (ByVal val As ULONGLONG) As ULONGLONG
Public Declare Function AX1_ParamFrameFreq Lib "AX1W32.DLL" Alias "_AX1_ParamFrameFreq@16" (ByVal configval As Long, ByVal percent As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_PktCalcCRCIP Lib "AX1W32.DLL" Alias "_AX1_PktCalcCRCIP@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktCalcCRCUDP Lib "AX1W32.DLL" Alias "_AX1_PktCalcCRCUDP@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetCtrlFlag Lib "AX1W32.DLL" Alias "_AX1_PktGetCtrlFlag@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetDstMac Lib "AX1W32.DLL" Alias "_AX1_PktGetDstMac@8" (ByRef pPkt As Byte, ByRef pAddress As ADDRESS) As Long
Public Declare Function AX1_PktGetFragID Lib "AX1W32.DLL" Alias "_AX1_PktGetFragID@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetFragOff Lib "AX1W32.DLL" Alias "_AX1_PktGetFragOff@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetIHL Lib "AX1W32.DLL" Alias "_AX1_PktGetIHL@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetInterfaceID Lib "AX1W32.DLL" Alias "_AX1_PktGetInterfaceID@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetIPChecksum Lib "AX1W32.DLL" Alias "_AX1_PktGetIPChecksum@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetIPDest Lib "AX1W32.DLL" Alias "_AX1_PktGetIPDest@4" (ByRef pPkt As Byte) As Long
Public Declare Function AX1_PktGetIPLength Lib "AX1W32.DLL" Alias "_AX1_PktGetIPLength@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetIPSrc Lib "AX1W32.DLL" Alias "_AX1_PktGetIPSrc@4" (ByRef pPkt As Byte) As Long
Public Declare Function AX1_PktGetProtocol Lib "AX1W32.DLL" Alias "_AX1_PktGetProtocol@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetSeqNum Lib "AX1W32.DLL" Alias "_AX1_PktGetSeqNum@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetSrcMac Lib "AX1W32.DLL" Alias "_AX1_PktGetSrcMac@8" (ByRef pPkt As Byte, ByRef pAddress As ADDRESS) As Long
Public Declare Function AX1_PktGetTOS Lib "AX1W32.DLL" Alias "_AX1_PktGetTOS@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetTTL Lib "AX1W32.DLL" Alias "_AX1_PktGetTTL@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetType Lib "AX1W32.DLL" Alias "_AX1_PktGetType@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetUDPChecksum Lib "AX1W32.DLL" Alias "_AX1_PktGetUDPChecksum@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetUDPLength Lib "AX1W32.DLL" Alias "_AX1_PktGetUDPLength@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetUDPPortDest Lib "AX1W32.DLL" Alias "_AX1_PktGetUDPPortDest@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetUDPPortSrc Lib "AX1W32.DLL" Alias "_AX1_PktGetUDPPortSrc@4" (ByRef pPkt As Byte) As Integer
Public Declare Function AX1_PktGetVersion Lib "AX1W32.DLL" Alias "_AX1_PktGetVersion@4" (ByRef pPkt As Byte) As Integer
Public Declare Sub AX1_PktPutCtrlFlag Lib "AX1W32.DLL" Alias "_AX1_PktPutCtrlFlag@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutDstMac Lib "AX1W32.DLL" Alias "_AX1_PktPutDstMac@12" (ByVal newMAC As ADDRESS, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutFragID Lib "AX1W32.DLL" Alias "_AX1_PktPutFragID@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutFragOff Lib "AX1W32.DLL" Alias "_AX1_PktPutFragOff@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutHeaderConstants Lib "AX1W32.DLL" Alias "_AX1_PktPutHeaderConstants@4" (ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutIHL Lib "AX1W32.DLL" Alias "_AX1_PktPutIHL@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutInterfaceID Lib "AX1W32.DLL" Alias "_AX1_PktPutInterfaceID@8" (ByVal busnum As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutIPChecksum Lib "AX1W32.DLL" Alias "_AX1_PktPutIPChecksum@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutIPDest Lib "AX1W32.DLL" Alias "_AX1_PktPutIPDest@8" (ByVal newval As Long, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutIPLength Lib "AX1W32.DLL" Alias "_AX1_PktPutIPLength@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutIPSrc Lib "AX1W32.DLL" Alias "_AX1_PktPutIPSrc@8" (ByVal newval As Long, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutLenFromFrame Lib "AX1W32.DLL" Alias "_AX1_PktPutLenFromFrame@8" (ByVal frameSize As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutProtocol Lib "AX1W32.DLL" Alias "_AX1_PktPutProtocol@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutSeqNum Lib "AX1W32.DLL" Alias "_AX1_PktPutSeqNum@8" (ByVal newNum As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutSrcMac Lib "AX1W32.DLL" Alias "_AX1_PktPutSrcMac@12" (ByVal newMAC As ADDRESS, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutTOS Lib "AX1W32.DLL" Alias "_AX1_PktPutTOS@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutTTL Lib "AX1W32.DLL" Alias "_AX1_PktPutTTL@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutType Lib "AX1W32.DLL" Alias "_AX1_PktPutType@8" (ByVal newType As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutUDPChecksum Lib "AX1W32.DLL" Alias "_AX1_PktPutUDPChecksum@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutUDPLength Lib "AX1W32.DLL" Alias "_AX1_PktPutUDPLength@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutUDPPortDest Lib "AX1W32.DLL" Alias "_AX1_PktPutUDPPortDest@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutUDPPortSrc Lib "AX1W32.DLL" Alias "_AX1_PktPutUDPPortSrc@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Sub AX1_PktPutVersion Lib "AX1W32.DLL" Alias "_AX1_PktPutVersion@8" (ByVal newval As Integer, ByRef pPkt As Byte)
Public Declare Function AX1_PortConfig Lib "AX1W32.DLL" Alias "_AX1_PortConfig@28" (ByVal configval As Long, ByVal dstid As Integer, ByVal srcid As Integer, ByVal depth As Integer, ByRef portptr As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortDataRd Lib "AX1W32.DLL" Alias "_AX1_PortDataRd@28" (ByRef data As Byte, ByRef lengthptr As Integer, ByRef rsnptr As Byte, ByRef timetaghptr As Long, ByRef timetagptr As Long, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortDataWr Lib "AX1W32.DLL" Alias "_AX1_PortDataWr@20" (ByVal rsn As Byte, ByRef data As Byte, ByVal length As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortGetHandle Lib "AX1W32.DLL" Alias "_AX1_PortGetHandle@16" (ByVal portnum As Integer, ByRef hport As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortGetInfo Lib "AX1W32.DLL" Alias "_AX1_PortGetInfo@32" (ByRef configval As Long, ByRef vlid As Integer, ByRef dstport As Integer, ByRef srcport As Integer, ByRef depth As Integer, ByRef reprate As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortGetNext Lib "AX1W32.DLL" Alias "_AX1_PortGetNext@20" (ByVal flag As Integer, ByRef nextPort As Integer, ByVal lastPort As Integer, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortGetQueueCount Lib "AX1W32.DLL" Alias "_AX1_PortGetQueueCount@12" (ByRef queuecount As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortInfoRd Lib "AX1W32.DLL" Alias "_AX1_PortInfoRd@28" (ByRef timetaghptr As Long, ByRef timetagptr As Long, ByRef activityptr As Long, ByRef errorptr As Long, ByRef rsnptr As Byte, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortRawRd Lib "AX1W32.DLL" Alias "_AX1_PortRawRd@24" (ByRef packet As Byte, ByRef lengthptr As Integer, ByRef timetaghptr As Long, ByRef timetagptr As Long, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortRawWr Lib "AX1W32.DLL" Alias "_AX1_PortRawWr@16" (ByRef packet As Byte, ByVal length As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortRd Lib "AX1W32.DLL" Alias "_AX1_PortRd@12" (ByRef pktdesc As AFDXPKTDESC, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortSkipConfig Lib "AX1W32.DLL" Alias "_AX1_PortSkipConfig@16" (ByVal ctrlflags As Long, ByVal trigid As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortStepConfig Lib "AX1W32.DLL" Alias "_AX1_PortStepConfig@16" (ByVal ctrlflags As Long, ByVal trigid As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RcvHostEnable Lib "AX1W32.DLL" Alias "_AX1_RcvHostEnable@8" (ByVal enableval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RobinSchedPort Lib "AX1W32.DLL" Alias "_AX1_RobinSchedPort@32" (ByVal bSkip As Long, ByVal bShot As Long, ByVal bTxA As Long, ByVal bTxB As Long, ByVal hport As Long, ByRef hscheditem As Long, ByVal hrobin As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedBuild Lib "AX1W32.DLL" Alias "_AX1_SchedBuild@8" (ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedCrtRobin Lib "AX1W32.DLL" Alias "_AX1_SchedCrtRobin@8" (ByRef hrobin As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedCrtSub Lib "AX1W32.DLL" Alias "_AX1_SchedCrtSub@8" (ByRef hsub As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedFrameEnd Lib "AX1W32.DLL" Alias "_AX1_SchedFrameEnd@8" (ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedFrameStart Lib "AX1W32.DLL" Alias "_AX1_SchedFrameStart@12" (ByVal usframetime As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedItemUpdate Lib "AX1W32.DLL" Alias "_AX1_SchedItemUpdate@24" (ByVal bSkip As Long, ByVal bShot As Long, ByVal bTxA As Long, ByVal bTxB As Long, ByVal hscheditem As Long, ByVal handleval As Long) As Long
